# swagger.json
@@ -211,7 +211,32 @@
             "$ref": "#/components/responses/Error500"
           }
         }
-      }
+      },
+      "/water/month": {
+        "get": {
+          "tags": ["Water"],
+          "summary": "Get water consumption for month",
+          "parameters": []
+          },
+          "responses": {
+            "200": {
+              "description": "Successful operation",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/WaterСonsumedResponse"
+                  }
+                }
+              }
+            },
+            "404": {
+              "$ref": "#/components/responses/Error404"
+            },
+            "500": {
+              "$ref": "#/components/responses/Error500"
+            }
+          }
+        }
     },
   "/water/rate": {
     "patch": {
